<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healthy Hankerings</string>
    <string name="home_title">Healthy Hankerings</string>
    <string name="sub_home_note">Click The Logo To Start</string>
    <string name="pedometer">Custom Recipe</string>
    <string name="gps">GPS</string>
    <string name="home">Home</string>
    <string name="title_activity_preference1"></string>
    <string name="title_activity_preference2"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preference3"></string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_pedometer"></string>
    <string name="next">Next</string>
    <string name="submit">What am I Hankering?</string>
    <string name="textureLabel">Texture</string>
    <string name="crispyLabel">Crispy</string>
    <string name="crunchyLabel">Crunchy</string>
    <string name="chewylabel">Chewy</string>
    <string name="softLabel">Soft</string>
    <string name="liquidLabel">Liquid Based / Creamy</string>
    <string name="subTextureLabel">Select A Texture</string>
    <string name="tasteLabel">Taste</string>
    <string name="subTasteLabel">Select A Taste</string>
    <string name="sweetLabel">Sweet</string>
    <string name="sourLabel">Sour</string>
    <string name="saltyLabel">Salty</string>
    <string name="bitterLabel">Bitter</string>
    <string name="savouryLabel">Savoury</string>
    <string name="spiceLabel">Spice</string>
    <string name="subSpiceLabel">Select A Spice Level</string>
    <string name="mildLabel">Mild</string>
    <string name="mediumLabel">Medium</string>
    <string name="hotLabel">Hot</string>
    <string name="flavorLabel">Flavor</string>
    <string name="subFlavorLabel">Select A Flavor</string>
    <string name="BBQ">BBQ</string>
    <string name="Cheesy">Cheesy</string>
    <string name="Chocolaty">Chocolaty</string>
    <string name="Cold">Cold</string>
    <string name="Comfort">Comfort</string>
    <string name="Dry">Dry</string>
    <string name="Floury">Floury</string>
    <string name="Fruity">Fruity</string>
    <string name="Garlicky">Garlicky</string>
    <string name="Gingery">Gingery</string>
    <string name="Grilled">Grilled</string>
    <string name="Meaty">Meaty</string>
    <string name="Nutty">Nutty</string>
    <string name="Raw">Raw</string>
    <string name="Seasoned">Seasoned</string>
    <string name="Smokey">Smokey</string>
    <string name="Tangy">Tangy</string>
    <string name="Vanilla">Vanilla</string>
    <string name="Warm">Warm</string>
    <string name="Zesty">Zesty</string>
    <string name="title_activity_preference4"></string>
    <string name="title_activity_result"></string>
    <string name="resultLabel">Your Current Hankering Is..</string>
    <string name="recipeName">Recipe Name</string>
    <string name="reset">Find Another Hankering?</string>
    <string name="title_activity_cuisine"></string>
    <string name="cuisineLabel">Cuisine</string>
    <string name="subCuisineLabel">Select A Cuisine</string>
    <string name="Mexican">Mexican</string>
    <string name="American">American</string>
    <string name="KidFriendly">Kid-Friendly</string>
    <string name="Asian">Asian</string>
    <string name="Italian">Italian</string>
    <string name="Barbecue">Barbecue</string>
    <string name="French">French</string>
    <string name="Southwestern">Southwestern</string>
    <string name="Southern">Southern</string>
    <string name="Indian">Indian</string>
    <string name="English">English</string>
    <string name="Chinese">Chinese</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="Spanish">Spanish</string>
    <string name="Greek">Greek</string>
    <string name="Cajun">Cajun</string>
    <string name="Thai">Thai</string>
    <string name="Irish">Irish</string>
    <string name="German">German</string>
    <string name="Japanese">Japanese</string>
    <string name="Moroccan">Moroccan</string>
    <string name="Cuban">Cuban</string>
    <string name="Hawaiian">Hawaiian</string>
    <string name="Portuguese">Portuguese</string>
    <string name="Hungarian">Hungarian</string>
    <string name="addLabel">Custom Recipe</string>
    <string name="addSubLabel">Add Your Personal Recipe</string>
    <string name="title_activity_maps">Map</string>
    <string name="camera">camera</string>
    <string name="Recipe">Recipe</string>
    <string name="recipe">Recipe</string>
    <string name="ing">Ingredients</string>
    <string name="grocery">Grocery Store Finder</string>

</resources>
