<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="david.com.healthyhankering.CuisineActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cuisineLabel"
        android:id="@+id/cuisineLabel"
        android:layout_gravity="center_horizontal|top"
        android:textSize="18pt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subCuisineLabel"
        android:id="@+id/cuisineSubLabel"
        android:layout_gravity="center_horizontal|top"
        android:paddingTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/cuisineSubLabel"
        android:layout_centerHorizontal="true">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/American"
                android:id="@+id/radButtonAmerican"
                android:layout_row="0"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Barbecue"
                android:id="@+id/radButtonBarbecue"
                android:layout_row="1"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cajun"
                android:id="@+id/radButtonCajun"
                android:layout_row="1"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chinese"
                android:id="@+id/radButtonChinese"
                android:layout_row="2"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cuban"
                android:id="@+id/radButtonCuban"
                android:layout_row="2"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/English"
                android:id="@+id/radButtonEnglish"
                android:layout_row="3"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/French"
                android:id="@+id/radButtonFrench"
                android:layout_row="3"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/German"
                android:id="@+id/radButtonGerman"
                android:layout_row="4"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Greek"
                android:id="@+id/radButtonGreek"
                android:layout_row="4"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hawaiian"
                android:id="@+id/radButtonHawaiian"
                android:layout_row="5"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hungarian"
                android:id="@+id/radButtonHungarian"
                android:layout_row="5"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Indian"
                android:id="@+id/radButtonIndian"
                android:layout_row="6"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Irish"
                android:id="@+id/radButtonIrish"
                android:layout_row="6"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Italian"
                android:id="@+id/radButtonItalian"
                android:layout_row="7"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Japanese"
                android:id="@+id/radButtonJapanes"
                android:layout_row="7"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KidFriendly"
                android:id="@+id/radButtonKids"
                android:layout_row="8"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mediterranean"
                android:id="@+id/radButtonMediterranean"
                android:layout_row="8"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mexican"
                android:id="@+id/radButtonMexican"
                android:layout_row="9"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Moroccan"
                android:id="@+id/radButtonMoroccan"
                android:layout_row="9"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Portuguese"
                android:id="@+id/radButtonPortuguese"
                android:layout_row="10"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Southern"
                android:id="@+id/radButtonSouther"
                android:layout_row="10"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Southwestern"
                android:id="@+id/radButtonSouthwestern"
                android:layout_row="11"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Spanish"
                android:id="@+id/radButtonSpanish"
                android:layout_row="11"
                android:layout_column="13" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thai"
                android:id="@+id/radButtonThai"
                android:layout_row="12"
                android:layout_column="0" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Asian"
                android:id="@+id/radButtonAsian"
                android:layout_row="0"
                android:layout_column="13" />

        </GridLayout>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openResult" />
</RelativeLayout>
