<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="david.com.healthyhankering.FlavorActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/radGroupFlavor"
        android:layout_alignEnd="@+id/radGroupFlavor"
        android:layout_above="@+id/radGroupFlavor"
        android:layout_alignParentTop="true"
        android:src="@drawable/fruit"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flavorLabel"
        android:id="@+id/flavorLabel"
        android:layout_gravity="center_horizontal|top"
        android:textSize="18pt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subFlavorLabel"
        android:id="@+id/subFlavorLabel"
        android:layout_gravity="center_horizontal|top"
        android:paddingTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/subFlavorLabel"
        android:layout_above="@+id/submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/radGroupFlavor"
        android:paddingTop="30dp">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BBQ"
                android:id="@+id/radButtonBBQ"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cheesy"
                android:id="@+id/radButtonCheesy"
                android:layout_row="0"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chocolaty"
                android:id="@+id/radButtonChocolaty"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cold"
                android:id="@+id/radButtonCold"
                android:layout_row="1"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Comfort"
                android:id="@+id/radButtonComfort"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dry"
                android:id="@+id/radButtonDry"
                android:layout_row="2"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Floury"
                android:id="@+id/radButtonFloury"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fruity"
                android:id="@+id/radButtonFruity"
                android:layout_row="3"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Garlicky"
                android:id="@+id/radButtonGarlicky"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gingery"
                android:id="@+id/radButtonGingery"
                android:layout_row="4"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Grilled"
                android:id="@+id/radButtonGrilled"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Meaty"
                android:id="@+id/radButtonMeaty"
                android:layout_row="5"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nutty"
                android:id="@+id/radButtonNutty"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Raw"
                android:id="@+id/radButtonRaw"
                android:layout_row="6"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seasoned"
                android:id="@+id/radButtonSeasoned"
                android:layout_row="7"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Smokey"
                android:id="@+id/radButtonSmokey"
                android:layout_row="7"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tangy"
                android:id="@+id/radButtonTangy"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vanilla"
                android:id="@+id/radButtonVanilla"
                android:layout_row="8"
                android:layout_column="6"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Warm"
                android:id="@+id/radButtonWarm"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_marginLeft="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Zesty"
                android:id="@+id/radButtonZesty"
                android:layout_row="9"
                android:layout_column="6"
                android:layout_marginRight="20dp" />
        </GridLayout>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openResult" />

</RelativeLayout>
