<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="david.com.healthyhankering.TextureActivity" tools:ignore="MergeRootFrame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textureLabel"
        android:id="@+id/textureLabel"
        android:layout_gravity="center_horizontal|top"
        android:textSize="18pt"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textureSubLabel"
        android:layout_alignStart="@+id/textureSubLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subTextureLabel"
        android:id="@+id/textureSubLabel"
        android:layout_gravity="center_horizontal|top"
        android:paddingTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNextToTaste"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="openPreference2"
        android:layout_below="@+id/radGroupTexture"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="413dp"
        android:layout_gravity="center"
        android:id="@+id/radGroupTexture"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chewylabel"
            android:id="@+id/chewyRadButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crispyLabel"
            android:id="@+id/crispyRadButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crunchyLabel"
            android:id="@+id/crunchyRadButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softLabel"
            android:id="@+id/softRadButton"
            android:singleLine="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liquidLabel"
            android:id="@+id/liquidRadButton" />

    </RadioGroup>

</RelativeLayout>
